<resources>
    <string name="app_name">Guess The Song</string>
    <string name="button_jugar">PLAY</string>
    <string name="button_instrucciones">INSTRUCTIONS</string>
    <string name="button_historial">GAME HISTORY</string>
    <string name="falloURL">The playlist entered is not a correct URL</string>
    <string name="falloCrearPartida">Game creation failed, try again</string>
    <string name="falloMenorIgualCero">The number of rounds must be between 1 and 100</string>
    <string name="labelURLPlaylist">Playlist URL:</string>
    <string name="labelNumRondas">Number of rounds:</string>
    <string name="button_continuar">Continue</string>
    <string name="title_configuracionjuego">Game settings</string>
    <string name="tab_masUsadas">Your most used</string>
    <string name="tab_recientes">Recent</string>
    <string name="tab_ejemplos">Examples</string>
    <string name="title_playlistRecomendadas">Recommended playlists</string>
    <string name="mensaje_playlistCambiada">Playlist established to:</string>
    <string name="title_participantes">Enroll participants</string>
    <string name="button_aniadirParticipante">Add participant</string>
    <string name="labelNombreParticipante">"Write the player's name:"</string>
    <string name="title_listaActualParticipantes">Players list</string>
    <string name="button_empezarJuego">"Let's play!"</string>
    <string name="falloMaxJugadores">Sorry! The maximum number of players is 7</string>
    <string name="falloNombreVacio">"The player's name cannot be empty"</string>
    <string name="avisoEliminarJugador">Remove player</string>
    <string name="avisoSeguroEliminarJugador">Are you sure you want to eliminate </string>
    <string name="finpregunta">"?"</string>
    <string name="eliminar">Remove</string>
    <string name="cancelar">Cancel</string>
    <string name="falloNoJugadores">There must be at least 1 player</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="labelRonda">"Round: "</string>
    <string name="labelTiempo">Seconds heard:</string>
    <string name="avisoFinTiempo">Time is up!</string>
    <string name="button_verResultado">See result</string>
    <string name="label_verResultado">The correct answer is...</string>
    <string name="button_siguienteRonda">Next round</string>
    <string name="labelQuienHaAcertado">Who has guessed it fastest?</string>
    <string name="labelPuntosActuales">Current points: </string>
    <string name="nadieLaHaAcertado">No one has got it right</string>
    <string name="labelResultadosFinales">FINAL RESULTS</string>
    <string name="buttonFinalizarPartida">Back to the main menu</string>
    <string name="label_puntos">Points:</string>
    <string name="label_acertadas">Correct songs:</string>
    <string name="label_numeroRondas">Number of rounds:</string>
    <string name="label_jugadorGanador">Winner:</string>
    <string name="title_instrucciones">Instructions</string>
    <string name="configuracion">Configuration</string>
    <string name="juego">Game</string>
    <string name="title_configuracion">Configuration</string>
    <string name="seleccion_playlist">
<b>Playlist selection:</b> <br/>
We have to introduce the link of a Spotify playlist (it is only compatible with Spotify). Then we will select the game duration (number of rounds).

We also have the option to pick common playlists, playlists that we have played before or our favorite playlists (most played). The game will automatically
introduce the link of the playlist when we press on it. <hr/>
        </string>
    <string name="seleccion_jugadores">
           <b> Game players:</b>

Here we can add players to the game. As easy as introducing the players name, pressing on "Add player" and thats all. When everybody is in the game we will
press "Play" and the game will start.</string>
    <string name="adivina">
<b>Guess the song:</b>
Each round, the game will select one random song from the playlist. The song will start playing after we press "Play", the timer will start counting too!
As soon as a player knows the answer, we will have to stop the song and watch the result. We can pause and play the song as much as we want until a maximum
of 30 seconds.
    </string>
    <string name="ver_resultado">
<b>Watch the result:</b>
Here we can see the information of the song that was playing and check if someone has guessed the answer. We will have to select the player who guessed the song
(if there is any) and the game will give his/her points. The faster you reply, more points you get!
    </string>
    <string name="fin_partida">

<b>The end of the game:</b>

After we reach the established number of rounds (or the playlist runs out of songs) the game will end and it will show us the players with his/her points and right
answers.
    </string>
    <string name="playlist_no_valida">This playlist is not valid</string>
</resources>