<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".InstruccionesActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/moradito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/layour_instrucciones"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/instrucciontesTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_instrucciones"
                android:textColor="@color/amarillito"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/text_configuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/configuracion"
                android:textColor="@color/amarillito"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/seleccion_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccion_playlist" />

            <TextView
                android:id="@+id/seleccion_jugadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccion_jugadores" />

            <TextView
                android:id="@+id/title_juego"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/juego"
                android:textColor="@color/amarillito"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/adivina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adivina" />

            <TextView
                android:id="@+id/ver_resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_resultado" />

            <TextView
                android:id="@+id/fin_partida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fin_partida" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>