<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradito"
    tools:context=".EscogerPlaylistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_configuracionjuego"
            android:textColor="@color/amarillito"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/labelURLPlaylist"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/urlPlaylist"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/labelNumRondas"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/numRondas"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:autofillHints="" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillito"
            android:onClick="respuestaEscogerPlaylist"
            android:text="@string/button_continuar" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_playlistRecomendadas"
            android:textColor="@color/amarillito"
            android:textSize="24sp" />

        <com.google.android.material.tabs.TabLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/moradito"
            app:tabIndicatorColor="@color/amarillito"
            app:tabSelectedTextColor="@color/amarillito"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_masUsadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cambiarPlaylistMasUsadas"
                android:text="@string/tab_masUsadas" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_recientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cambiarPlaylistRecientes"
                android:text="@string/tab_recientes" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_ejemplos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cambiarPlaylistEjemplos"
                android:text="@string/tab_ejemplos" />
        </com.google.android.material.tabs.TabLayout>

        <ScrollView
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listaPlaylist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>