<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradito"
    tools:context=".EscogerParticipantesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_participantes"
            android:textColor="@color/amarillito"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_avatar_astronauta" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/labelNombreParticipante"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/nombreParticipante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:maxLines="1" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_addJugador"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillito"
            android:onClick="respuestaAddParticipante"
            android:text="@string/button_aniadirParticipante" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/title_listaActualParticipantes"
            android:textColor="@color/amarillito"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_empezarJuego"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillito"
            android:text="@string/button_empezarJuego" />

        <ScrollView
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listaJugadores"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>